--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg stroke">
                 <a class="navbar-brand" href="index.html">
-                    <span class="fa fa-laptop"></span> MUHAMMED JUNAID
+                    <span class="fa fa-laptop"></span>JUNAID
                 </a>
                 <!-- if logo is image enable this   
             <a class="navbar-brand" href="#index.html">
