image-shape-changed

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-4">
                       <div class="img-effect text-lg-center">
                           <img src="https://media-exp1.licdn.com/dms/image/D4E03AQHkRTgAvIGnNg/profile-displayphoto-shrink_400_400/0/1635067105302?e=1672876800&v=beta&t=9jLrJSQLXGPMBqNBd2z12sEXldE94NEkp2jlfyRMceg"
-                           alt="myphoto" class="img-fluid">
+                           alt="myphoto" class="radius-image img-fluid">
                       </div>
                   </div>
               </div>
